feat: fetch current user info
